--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -14,5 +14,8 @@
       background: white;
       border: 2px solid rgb(56, 36, 5);
     }
+    &:required {
+      border: 2px solid red;
+    }
   }
 }
